care/force-app/main/default/objects/Fee_Rate__c/Fee_Rate__c.object-meta.xml
<CustomObject>
    <label>Fee Rate</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Fee Rate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>