care/force-app/main/default/objects/Fee_Rate__c/fields/Account_Id_18_Digit__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_18_Digit__c</fullName>
    <formula>CASESAFEID( Account_Name__r.Id)</formula>
    <label>Account Id(18 Digit)</label>
    <type>Text</type>
</CustomField>