care/force-app/main/default/objects/Fee_Rate__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fee Rates</relationshipLabel>
    <relationshipName>Fee_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>