care/force-app/main/default/objects/Fee_Rate__c/fields/Full_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Full_Day_Rate__c</fullName>
    <label>Full Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>