care/force-app/main/default/objects/Fee_Rate__c/fields/Half_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_Rate__c</fullName>
    <label>Half Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>