care/force-app/main/default/objects/Fee_Rate__c/fields/Min_Age_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Min_Age_in_Months__c</fullName>
    <label>Min Age in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>